# gadgets

bad_usb/: .gitignore  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
bad_usb/main/: CMakeLists.txt  hid_gatts.c
esp32-ble-dht11/: CMakeLists.txt
esp32-ble-dht11/main/: CMakeLists.txt  Kconfig.projbuild  dht11.c  dht11.h  gatts_profile_dht.c  gatts_profile_dht.h  main.c
esp32-desktop/: .clangd  CMakeLists.txt  README.md
esp32-desktop/main/: Kconfig.projbuild  idf_component.yml  main.c
ip-camera/: .clangd  CMakeLists.txt  README.md
ip-camera/main/: Kconfig.projbuild  idf_component.yml  main.c
mochi/: .gitignore  CMakeLists.txt  README.md  extract.sh  extract_gif.py  flash.sh  mochi.c  mochi_angry.h  mochi_cute.h  mochi_hugging.h  mochi_laughing.h  mochi_sitting.h
